fix bug caused by LineThicknessAnalyzer returning an unmodifiable list